# tweaks

./: .gitignore  Cargo.toml  README.md  default.nix  dev.edfloreshz.CosmicTweaks.json  dev.edfloreshz.Tweaks.json  flake.nix  justfile  shell.nix
.cargo/: config.toml
.github/workflows/: ci.yml  pr.yml  push.yml
app/: Cargo.toml  README.md  dev.edfloreshz.CosmicTweaks.json  justfile
app/i18n/en/: cosmic_ext_tweaks.ftl
app/i18n/fr/: cosmic_ext_tweaks.ftl
app/res/: app.desktop  metainfo.xml
app/src/: app.rs  lib.rs  main.rs  settings.rs
app/src/app/: key_bind.rs
app/src/core/: config.rs  config_manager.rs  icons.rs  mod.rs
app/src/pages/: color_schemes.rs  dock.rs  panel.rs
app/src/pages/color_schemes/: config.rs
applet/: .gitignore  Cargo.toml  README.md  justfile
applet/i18n/en/: cosmic_ext_tweaks_applet.ftl
applet/res/: app.desktop  metainfo.xml
applet/src/: app.rs  main.rs
applet/src/core/: config.rs  mod.rs
docs/: CNAME  index.html  style.css
i18n/bg/: cosmic_ext_tweaks.ftl
i18n/cs/: cosmic_ext_tweaks.ftl
i18n/en/: cosmic_app_template.ftl  cosmic_ext_tweaks.ftl  cosmic_tweak_tool.ftl  cosmic_tweaks.ftl
i18n/es/: cosmic_ext_tweaks.ftl
i18n/es-419/: cosmic_ext_tweaks.ftl
i18n/es-MX/: cosmic_app_template.ftl  cosmic_ext_tweaks.ftl  cosmic_tweak_tool.ftl  cosmic_tweaks.ftl
i18n/fr/: cosmic_ext_tweaks.ftl
i18n/ja/: cosmic_ext_tweaks.ftl
i18n/nl/: cosmic_ext_tweaks.ftl
i18n/pl/: cosmic_ext_tweaks.ftl
i18n/pt-BR/: cosmic_ext_tweaks.ftl
i18n/ro/: cosmic_ext_tweaks.ftl
i18n/sr-Cyrl/: cosmic_ext_tweaks.ftl
i18n/sr-Latn/: cosmic_ext_tweaks.ftl
i18n/sv/: cosmic_ext_tweaks.ftl
res/: app.desktop  desktop_entry.desktop  dev.edfloreshz.CosmicTweakTool.desktop  dev.edfloreshz.CosmicTweakTool.metainfo.xml  dev.edfloreshz.CosmicTweaks.desktop  dev.edfloreshz.CosmicTweaks.metainfo.xml  metainfo.xml
res/layouts/: cosmic.ron  gnome-2.ron  mac.ron  ubuntu.ron  windows.ron
res/shortcuts/: windows.ron
res/themes/: Dark.ron  Light.ron
src/: app.rs  localize.rs  main.rs  resources.rs  settings.rs
src/app/: action.rs  config.rs  context.rs  context_drawer.rs  cosmic.rs  cosmic_panel_button_config.rs  dialog.rs  flags.rs  footer.rs  header.rs  init.rs  key_bind.rs  key_bindings.rs  message.rs  nav.rs  page.rs  resources.rs  settings.rs  style.rs  subscription.rs  update.rs  view.rs
src/app/core/: config.rs  grid.rs  icons.rs  key_bindings.rs  localize.rs  mod.rs  settings.rs  style.rs
src/app/pages/: dock.rs  mod.rs  shortcuts.rs
src/app/pages/color_schemes/: config.rs  mod.rs  preview.rs  view.rs
src/app/pages/layouts/: config.rs  dialog.rs  helpers.rs  mod.rs  preview.rs
src/app/pages/panel/: config.rs  mod.rs  size.rs
src/app/pages/snapshots/: config.rs  mod.rs
src/core/: config.rs  error.rs  grid.rs  icons.rs  localize.rs  mod.rs  nav.rs  settings.rs  style.rs
src/pages/: color_schemes.rs  dock.rs  home.rs  layouts.rs  mod.rs  panel.rs  shortcuts.rs  snapshots.rs  theme_pack.rs
src/pages/color_schemes/: config.rs  cosmic_theme.rs  mod.rs  preview.rs
src/pages/color_schemes/providers/: mod.rs
src/pages/layouts/: config.rs  factory.rs  mod.rs  preview.rs
src/pages/layouts/files/: cosmic.ron
src/pages/panel/: mod.rs
src/pages/snapshots/: config.rs  mod.rs
src/pages/theme_packs/: mod.rs  theme_pack.rs
