[package]
name = "cosmic-ext-tweaks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
ashpd = "0.8.1"
dirs = "5.0.1"
env_logger = "0.11.5"
i18n-embed-fl = "0.8"
log = "0.4.22"
once_cell = "1.19.0"
open = "5.1.2"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12", features = ["json"] }
ron = "0.8.1"
rust-embed = "8.3.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["multi-window", "tokio", "winit", "wgpu"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

[dependencies.cosmic-panel-config]
git = "https://github.com/pop-os/cosmic-panel"

[dependencies.serde]
version = "1.0.196"
features = ["derive"]

[dependencies.tokio]
version = "1.35.1"
features = ["macros", "fs", "rt"]
