[package]
name = "cosmic-ext-tweaks"
version = "0.2.0"
edition = "2024"

[dependencies]
dirs = "6"
env_logger = "0.11"
i18n-embed-fl = "0.10"
log = "0.4"
open = "5"
pretty_env_logger = "0.5"
reqwest = { version = "0.12", features = ["json"] }
ron = "0.11"
rust-embed = "8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dependencies.ashpd]
version = "0.12"
default-features = false
features = ["async-std"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["tokio", "winit", "wgpu", "about"]

[dependencies.cosmic-ext-config-templates]
git = "https://github.com/ryanabx/cosmic-ext-config-templates"

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.cosmic-panel-config]
git = "https://github.com/pop-os/cosmic-panel"

[dependencies.cosmic-settings-config]
git = "https://github.com/pop-os/cosmic-settings-daemon"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["macros", "fs", "rt"]

[patch."https://github.com/smithay/client-toolkit.git"]
sctk = { package = "smithay-client-toolkit", version = "=0.19.2" }

#[patch."https://github.com/pop-os/libcosmic.git"]
#libcosmic = { path = "../../edfloreshz-ext/libcosmic" }
#cosmic-config = { path = "../../edfloreshz-ext/libcosmic/cosmic-config" }
#cosmic-config-derive = { path = "../../edfloreshz-ext/libcosmic/cosmic-config-derive" }
#cosmic-theme = { path = "../../edfloreshz-ext/libcosmic/cosmic-theme" }
