[package]
name = "cosmic-ext-tweaks"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
authors = ["Eduardo Flores <edfloreshz@proton.me>"]

[dependencies]
libcosmic.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
anyhow = "1.0.82"
ashpd = "0.8.1"
dirs = "5.0.1"
i18n-embed-fl = "0.8"
once_cell = "1.19.0"
open = "5.1.2"
reqwest = { version = "0.12", features = ["json"] }
ron = "0.8.1"
rust-embed = "8.3.0"
paste = "1.0"

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

[dependencies.cosmic-panel-config]
git = "https://github.com/pop-os/cosmic-panel"

[dependencies.serde]
version = "1.0.196"
features = ["derive"]

[dependencies.tokio]
version = "1.35.1"
features = ["macros", "fs", "rt"]

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }
