[package]
name = "cosmic-ext-tweaks-applet"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Eduardo Flores <edfloreshz@proton.me>"]

[dependencies]
libcosmic.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
i18n-embed-fl = "0.8"
open = "5.1.3"
rust-embed = "8.3.0"
cosmic-ext-tweaks = { path = "../app" }
tokio = "1.40.0"

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]
